# rtf

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
slurm/: early_classification.sh  early_zoobot.sh  early_zoobot_ft.sh  eval_zoobot.sh  evaluate.sh  preprocess_gp.sh  preprocess_images.sh  sweep_all_modes.sh  train_full.sh  train_full_part2.sh  train_metadata.sh  train_multimodal.sh  train_synthetic.sh  train_with_synthetic.sh
src/: dataset.py  eval_early.py  evaluate_physical.py  generate_surveysim.py  generate_synthetic.py  linear_probe.py  mlp_decoder.py  model.py  preprocess_alerts.py  train.py  visualize.py
tests/: conftest.py  test_dataset.py  test_model.py  test_training.py
