[project]
name = "alert-compression"
version = "0.1.0"
description = "Latent-space compression of astronomical alert streams"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "torch",
    "scikit-learn",
    "matplotlib",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
